--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,14 @@
         xmlns:local="clr-namespace:Project_PO"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Login" Height="600" Width="800" WindowStyle="None">
+        Title="Login" Height="600" Width="800" WindowStyle="None"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid Background="AntiqueWhite">
         <Border MinWidth="400" Margin="15" Background="White" VerticalAlignment="Center" Padding="40" MaxWidth="550" CornerRadius="20">
             <StackPanel>
                 <TextBlock Text="Please login!" FontSize="30" FontWeight="Bold" Margin="0 0 0 20"/>
-
                 
                 <TextBox x:Name="textBoxLogin" materialDesign:HintAssist.Hint="Enter your login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <PasswordBox x:Name="passBox" materialDesign:HintAssist.Hint="Enter your password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
