--- a/MainForm.xaml
+++ b/MainForm.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_PO"
         mc:Ignorable="d"
-        Title="MainForm" Height="450" Width="800">
-    <Grid>
-        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Login" Height="600" Width="800" WindowStyle="None"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid Background="AntiqueWhite">
+        <Border MinWidth="650" Margin="15,30,15,80" Background="White" VerticalAlignment="Center" Padding="100" MaxWidth="700" CornerRadius="20" Height="490">
+            <StackPanel Margin="0,0,0,10">
+                <Button Content="Reservations" Height="60" Margin="0 5" Click="Button_Reservations_Click" FontFamily="Yu Gothic UI Semibold" FontSize="18"/>
+                <Button Content="Menu" Height="60" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_Menu_Click"/>
+                <Button Content="Bill" Height="60" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_Bill_Click"/>
+                <Button Content="Logout" Height="60" Margin="0 5" Background="#FF4040" Click="Button_logout_Click" FontFamily="Yu Gothic UI Semibold" FontSize="18"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
