--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,7 +16,7 @@
                 <TextBlock Text="Please login!" FontSize="30" FontWeight="Bold" Margin="0 0 0 20"/>                
                 <TextBox x:Name="textBoxLogin" materialDesign:HintAssist.Hint="Enter your login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <PasswordBox x:Name="passBox" materialDesign:HintAssist.Hint="Enter your password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                <Button Content="Login" Margin="0 20" Click="Button_login_Click"/>
+                <Button Content="Login" Margin="0 20" Click="Button_login_Click" IsDefault="True"/>
                 <Button Content="Exit" Margin="0 0" Background="#FF4040" Click="Button_logout_Click"/>
             </StackPanel>
         </Border>
