--- a/MainFormAdmin.xaml
+++ b/MainFormAdmin.xaml
@@ -9,6 +9,7 @@
         Title="Login" Height="600" Width="800" WindowStyle="None"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
+        Loaded="Refresh"
         >
     <Grid Background="AntiqueWhite">
         <Border MinWidth="650" Margin="15,30,15,80" Background="White" VerticalAlignment="Center" Padding="100" MaxWidth="700" CornerRadius="20" Height="490">
@@ -18,7 +19,14 @@
                 <Button Content="Bill" Height="45" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_Bill_Click"/>
                 <Button Content="Add new waiter" Height="45" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_AddNW_Click"/>
                 <Button Content="Logout" Height="45" Margin="0 5" Background="#FF4040" Click="Button_logout_Click" FontFamily="Yu Gothic UI Semibold" FontSize="18"/>
+                
             </StackPanel>
+            
         </Border>
+        <StackPanel>
+            <Label x:Name="lognamek"/>
+            <Label x:Name="logsnamek"/>
+        </StackPanel>
+        
     </Grid>
 </Window>
