--- a/MainFormAdmin.xaml
+++ b/MainFormAdmin.xaml
@@ -17,7 +17,7 @@
                 <Button Content="Reservations" Height="45" Margin="0 5" Click="Button_Reservations_Click" FontFamily="Yu Gothic UI Semibold" FontSize="18"/>
                 <Button Content="Menu" Height="45" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_Menu_Click"/>
                 <Button Content="Bill" Height="45" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_Bill_Click"/>
-                <Button Content="Add new waiter" Height="45" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_AddNW_Click"/>
+                <Button Content="Waiters" Height="45" Margin="0 5" FontFamily="Yu Gothic UI Semibold" FontSize="18" Click="Button_AddNW_Click"/>
                 <Button Content="Logout" Height="45" Margin="0 5" Background="#FF4040" Click="Button_logout_Click" FontFamily="Yu Gothic UI Semibold" FontSize="18"/>
                 
             </StackPanel>
