--- a/AddNewWaiter.xaml
+++ b/AddNewWaiter.xaml
@@ -42,8 +42,11 @@
             </StackPanel>
             
         </Border>
-        s
-        
-        
+                <StackPanel Grid.Row="1" Grid.Column="1"
+            x:Name="usersStackTable"         
+            Background="#C5AFA0"
+            />
+
+
     </Grid>
 </Window>
