--- a/Project_PO/Project_PO/MainWindow.xaml
+++ b/Project_PO/Project_PO/MainWindow.xaml
@@ -13,8 +13,8 @@
         <Border MinWidth="400" Margin="15" Background="White" VerticalAlignment="Center" Padding="40" MaxWidth="550" CornerRadius="20">
             <StackPanel>
                 <TextBlock Text="Please login!" FontSize="30" FontWeight="Bold" Margin="0 0 0 20"/>
-                <TextBox x:Name="textBoxLogin" materialDesign:HintAssist.Hint="Enter your login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <PasswordBox x:Name="passBox" materialDesign:HintAssist.Hint="Enter your password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                <TextBox x:Name="textBoxLogin" materialDesign:HintAssist.Hint="Enter your login" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="Kelner1"/>
+                <PasswordBox x:Name="passBox" materialDesign:HintAssist.Hint="Enter your password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Password="11111"/>
                 <Button Content="Login" Margin="0 20" Click="Button_login_Click" IsDefault="True"/>
                 <Button Content="Exit" Margin="0 0" Background="#FF4040" Click="Button_logout_Click"/>
             </StackPanel>
