--- a/Project_PO/Project_PO/Reservations/Reservations1.xaml
+++ b/Project_PO/Project_PO/Reservations/Reservations1.xaml
@@ -9,7 +9,7 @@
         Title="Reservations" Height="600" Width="800" WindowStyle="None"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
-        
+        Loaded="Refresh1"
         >
     <Grid Background="AntiqueWhite">
         <Grid.RowDefinitions>
@@ -43,18 +43,30 @@
             <TextBox x:Name="textBoxIDK" Margin="10,0,10,0" materialDesign:HintAssist.Hint="Enter the name of the waiter" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
             <Button x:Name="DelReserv" Content="Delete reservation" Margin="10,20,10,0" Click="DelReserv_Click"/>
             <TextBox x:Name="textBoxIDReserv" Margin="10,0,10,0" materialDesign:HintAssist.Hint="Enter the ID to delete" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-            <Button x:Name="EditReserv" Content="Edit reservation" Margin="10,10,10,0"/>
-            <Button x:Name="BtM" Content="Back to menu" Background="Red" VerticalAlignment="Bottom" Margin="10,20,10,0" Click="BtM_Click"/>
-            
-            
+            <Button x:Name="EditReserv" Content="Edit reservation" Margin="10,10,10,0" Click="itemEdit_Click"/>
+            <Button x:Name="BtM" Content="Back to menu" Background="Red" VerticalAlignment="Bottom" Margin="10,20,10,0" Click="BtM_Click">
+                <Button.ToolTip>
+                    <ToolTip HasDropShadow ="True" Placement ="Right">
+                        To change a reservation, you need to know its id
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
 
+
+
+
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="0" Margin="174,100,0,10" Orientation="Horizontal" HorizontalAlignment="Left" Width="414" >
+            <Button x:Name="allResev" Content="All" Width="80" VerticalAlignment="Center" Margin="170,0,0,0" Click="allResev_Click" />
+            <Button x:Name="todayReserv" Content="Today" Width="80" Click="todayReserv_Click"/>
+            <Button x:Name="Refresh" Content="Refresh" Width="80" Cursor="Hand" Click="Refresh_Click"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1"
             x:Name="usersStackTable"         
             Background="AntiqueWhite" Margin="0,193,0,0"
             />
         <StackPanel Grid.Row="1" Grid.Column="1">
-            <ListBox> </ListBox>
+            <ListBox></ListBox>
             <DataGrid x:Name="grdReservations" Height="442" AutoGenerateColumns="False" Width="583">
                 <DataGrid.Columns>
                     <materialDesign:DataGridTextColumn Width="*" Header="Reservation number" Binding="{Binding idr}" IsReadOnly="True" />
@@ -71,12 +83,12 @@
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
-            
+
 
         </StackPanel>
-        
-        
-        
+
+
+
 
 
 
