--- a/Project_PO/Project_PO/App.xaml
+++ b/Project_PO/Project_PO/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Project_PO"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginAndMainForm/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
