--- a/Project_PO/Project_PO/BillWindow.xaml
+++ b/Project_PO/Project_PO/BillWindow.xaml
@@ -1,25 +1,79 @@
-﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window x:Class="Project_PO.BillWindow"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_PO"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Project_PO.BillWindow"
         mc:Ignorable="d"
-        Title="Bill" Height="450" Width="800" Loaded="Window_Loaded">
-    <Grid Margin="0,48,0,0">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Reservations" Height="600" Width="800" WindowStyle="None"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        Loaded="Window_Loaded"
+        >
+    <Grid Background="Aquamarine">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="3*"></RowDefinition>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="15*"/>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="grdBills" Grid.ColumnSpan="2" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-                <materialDesign:DataGridTextColumn Width="3*" Header="IdBill" Binding="{Binding IdBill}"/>
-                <materialDesign:DataGridTextColumn Width="*" Header="SumBill" Binding="{Binding SumBill}"/>
-                <materialDesign:DataGridTextColumn Width="*" Header="Tips" Binding="{Binding Tips}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <Button x:Name="btnGoBack" Content="Button" HorizontalAlignment="Left" Margin="36,-41,0,0" VerticalAlignment="Top" Grid.Column="1" Cursor="Hand"/>
+        <Border Grid.Column="0" Grid.Row="0">
+            <StackPanel Grid.Row="0" Grid.Column="0">
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0" FontFamily="Yu Gothic UI Semibold" FontSize="22">
+                Reservations
+                </TextBlock>
+                <Label x:Name="nameK" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,40,0,0" FontFamily="Yu Gothic UI Semibold" FontSize="16"/>
+                <Label x:Name="snameK" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,0" FontFamily="Yu Gothic UI Semibold" FontSize="16"/>
+
+
+
+            </StackPanel>
+        </Border>
+
+
+        <StackPanel Grid.Row="1" Grid.Column="0">
+            <Button x:Name="AddReserv" Content="Add reservation" Margin="10,20,10,0"  />              
+            <Button x:Name="DelReserv" Content="Delete reservation" Margin="10,20,10,0" />
+            <Button x:Name="BtM" Content="Back to menu" Background="Red" VerticalAlignment="Bottom" Margin="10,20,10,0"/>
+            <!--<ComboBox x:Name="CBID" Width="120" Margin="0,50,0,0" Background="Chocolate" SelectionChanged="CBID_SelectionChanged" />-->
+            <ComboBox x:Name="cbBBill" ItemsSource="{Binding Bill}" SelectionChanged="ComboBox_SelectionChanged">
+                
+                
+            </ComboBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="0" Margin="174,100,0,10" Orientation="Horizontal" HorizontalAlignment="Left" Width="414" >
+            <Button x:Name="allResev" Content="All" Width="80" VerticalAlignment="Center" Margin="170,0,0,0"  />
+            <Button x:Name="todayReserv" Content="Today" Width="80"/>
+            <Button x:Name="Refresh" Content="Refresh" Width="80" Cursor="Hand" />
+        </StackPanel>
+        
+        <StackPanel Grid.Row="1" Grid.Column="1">
+            <ListBox></ListBox>
+            <DataGrid x:Name="grdBills" Height="442" AutoGenerateColumns="False" Width="583" SelectionChanged="grdBills_SelectionChanged">
+                <DataGrid.Columns>
+                    <materialDesign:DataGridTextColumn Width="*" Header="Bill's ID" Binding="{Binding idbill}" IsReadOnly="True" />
+                    <materialDesign:DataGridTextColumn Width="*" Header="Dishes" Binding="{Binding dishes}" />
+                    <materialDesign:DataGridTextColumn Width="*" Header="Bill" Binding="{Binding sumbill}" />                                        
+                </DataGrid.Columns>
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem x:Name="itemEdit" Header="Edit" />
+                        <MenuItem x:Name="itemRemove" Header="Remove" />
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
+            </DataGrid>
+
+
+        </StackPanel>
+
+
+
+
+
+
 
     </Grid>
 </Window>
